--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@
 #    pip-compile --output-file requirements.txt requirements.in
 #
 click==6.6                # via pip-tools
+dj-database-url==0.4.1
 Django==1.10.2
+djangorestframework==3.4.7
 first==2.0.1              # via pip-tools
 pip-tools==1.7.0
 psycopg2==2.6.2
